--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.0"
+    "mongoose": "^8.14.2",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
