--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "gridfs-stream": "^1.1.1",
     "lightningcss": "^1.29.3",
+    "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
