--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lightningcss": "^1.29.3",
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   }
