--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "node-gyp-build": "^4.8.4"
   }
 }
